Bug 396009 - Konsole crashed with Fixedsys Excelsior font
Summary: Konsole crashed with Fixedsys Excelsior font
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 18.04.2
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2018-06-30 05:57 UTC by abis.biso
Modified: 2018-07-10 02:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description abis.biso 2018-06-30 05:57:25 UTC
Application: konsole (18.04.2)

Qt Version: 5.11.0
Frameworks Version: 5.47.0
Operating System: Linux 4.13.0-45-generic x86_64
Distribution: KDE neon User Edition 5.13

-- Information about the crash:
- Custom settings of the application:
Changed the fixed width font to  Fixedsys Excelsior from system settings.
It was not listed in the font selection in konsole.

The crash can be reproduced every time.

-- Backtrace:
Application: Konsole (konsole), signal: Floating point exception
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f5a167798c0 (LWP 2803))]

Thread 2 (Thread 0x7f59f9fec700 (LWP 2805)):
#0  0x00007f5a1611574d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f5a0bda738c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f5a0bda749c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f5a123fbbeb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f5a123a31ca in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f5a121d85e4 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f5a102eaf35 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#7  0x00007f5a121e3727 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f5a0d9bf6ba in start_thread (arg=0x7f59f9fec700) at pthread_create.c:333
#9  0x00007f5a1612141d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7f5a167798c0 (LWP 2803)):
[KCrash Handler]
#6  0x00007f5a15d9a881 in QRect::height (this=0x13639d4, this=0x13639d4) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qrect.h:269
#7  Konsole::TerminalDisplay::calcGeometry (this=this@entry=0x1363940) at /workspace/build/src/TerminalDisplay.cpp:1958
#8  0x00007f5a15d9a9cd in Konsole::TerminalDisplay::makeImage (this=this@entry=0x1363940) at /workspace/build/src/TerminalDisplay.cpp:1912
#9  0x00007f5a15d9aabe in Konsole::TerminalDisplay::updateImageSize (this=this@entry=0x1363940) at /workspace/build/src/TerminalDisplay.cpp:1880
#10 0x00007f5a15d9aee5 in Konsole::TerminalDisplay::setMargin (this=this@entry=0x1363940, margin=margin@entry=1) at /workspace/build/src/TerminalDisplay.cpp:2008
#11 0x00007f5a15dadbe2 in Konsole::ViewManager::applyProfileToView (this=this@entry=0xfb2470, view=0x1363940, profile=...) at /workspace/build/src/ViewManager.cpp:941
#12 0x00007f5a15dae550 in Konsole::ViewManager::createView (this=this@entry=0xfb2470, session=session@entry=0xfe02d0, container=0x12898b0, index=index@entry=-1) at /workspace/build/src/ViewManager.cpp:591
#13 0x00007f5a15db02c1 in Konsole::ViewManager::createView (this=0xfb2470, session=session@entry=0xfe02d0) at /workspace/build/src/ViewManager.cpp:649
#14 0x00007f5a16400f53 in Konsole::MainWindow::createView (session=0xfe02d0, this=0xefbfb0) at /workspace/build/src/MainWindow.cpp:547
#15 Konsole::MainWindow::createSession (this=this@entry=0xefbfb0, profile=..., directory=...) at /workspace/build/src/MainWindow.cpp:510
#16 0x00007f5a163fe30d in Konsole::Application::newInstance (this=0x7ffe28f8fac0) at /workspace/build/src/Application.cpp:232
#17 0x00007f5a1640cc65 in kdemain (argc=1, argv=<optimized out>) at /workspace/build/src/main.cpp:181
#18 0x00007f5a1603a830 in __libc_start_main (main=0x4006b0 <main(int, char**)>, argc=1, argv=0x7ffe28f8fc18, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffe28f8fc08) at ../csu/libc-start.c:291
#19 0x00000000004006e9 in _start ()

Reported using DrKonqi
Comment 1 Kurt Hindenburg 2018-07-06 23:56:34 UTC
Where are you getting that font from?  The one from comment #16 appears to work fine w/ Konsole

https://bugs.launchpad.net/ubuntu/+bug/200671/comments/16
Comment 2 abis.biso 2018-07-07 05:28:12 UTC
Hi,

I downloaded the font from http://www.fixedsysexcelsior.com/ and installed it for my user only.
Comment 3 Kurt Hindenburg 2018-07-07 12:28:03 UTC
Yes, I can get Konsole to crash as well using the font from there.  Makes me think there's something wrong w/ that font as ubuntu has a "fixed" version.

Still Konsole shouldn't crash.
Comment 4 Kurt Hindenburg 2018-07-07 12:33:46 UTC
0x00007ffff74cdc64 in Konsole::TerminalDisplay::calcGeometry (this=0x93d3b0)
    at /mnt/projects/Devel/KDE/src/kde/applications/konsole/src/TerminalDisplay.cpp:2054
2054        _lines = qMax(1, _contentRect.height() / _fontHeight);
(gdb) print _fontHeight
$1 = 0
Comment 5 Kurt Hindenburg 2018-07-10 02:00:53 UTC
Git commit 1b11b1d3fb6c9cdef2283415c0b474e6f20fc377 by Kurt Hindenburg.
Committed on 10/07/2018 at 01:58.
Pushed by hindenburg into branch 'master'.

Fix crashes when font's height() < 1

Tested w/ bad version of the Fixedsys Excelsior font from their website
A good font version is on ubuntu's site
https://bugs.launchpad.net/ubuntu/+bug/200671/comments/16

M  +20   -0    src/TerminalDisplay.cpp

https://commits.kde.org/konsole/1b11b1d3fb6c9cdef2283415c0b474e6f20fc377