Fix crashes when font's height() < 1

Tested w/ bad version of the Fixedsys Excelsior font from their website
A good font version is on ubuntu's site
https://bugs.launchpad.net/ubuntu/+bug/200671/comments/16

BUG: 396009